dodo-learning/k8s_sample/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nginx-demo
        backend:
          serviceName: nginx-service
          servicePort: 80
      - path: /HelloWebapp
        backend:
          serviceName: hello-web-app-service
          servicePort: 8080
